# tdd.io-fastapi-docker

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  note.md  notes.md  pyproject.toml
.github/workflows/:  main.yml
project/_helpers/: fastapi-tdd.io-docker.postman_collection.json  http-client.env.json  idea.http  makefile
project/app/: config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  summaries.py
project/http-client/: fastapi-tdd.io-docker.postman_collection.json  idea.http  makefile
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
